# adventures-in-compilation

./: .gitignore  README.md  adventures-in-compilation.cabal  compile.sh  lvar-tests.sh  run-graph.sh  run-lvar.sh  run.sh  stack.yaml
app/: AST.hs  Compiler.hs  DominationGraph.hs  Instr.hs  Interp.hs  LL1.hs  LVar.hs  Lexemes.hs  Main.hs  Parser.hs  ParserTest.hs  Regular.hs  Utils.hs
app/CFG/: Compiler.hs  Instr.hs
app/Graph/: Defs.hs  Dominator.hs  DominatorTree.hs  Parser.hs
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  ErrorHighlight.tsx  TestList.tsx  TreeView.tsx  api.ts  style.css
graphs/: g01.graph
lib/: AST.hs  DirectedGraph.hs  Free.hs  Graphviz.hs  Interp.hs  Parser.hs  Pipeline.hs  SetMultimap.hs  UndirectedGraph.hs  Utils.hs
lib/CFG/: Compiler.hs  Instr.hs  PhiPlacement.hs  Printer.hs
lib/Grammar/: Grammar.hs  Pregrammar.hs
lib/Graph/: Defs.hs  DominationFrontier.hs  DominatorTree.hs  Parser.hs
lib/LVar/: AST.hs  ASTAlloc.hs  ASTC.hs  ASTMon.hs  Compiler.hs  CompilerPipeline.hs  ExplicateControl.hs  Lexer.x  LexerDeps.hs  Liveness.hs  MoveBiasing.hs  NewParser.y  NewParserDeps.hs  Operators.hs  OptimizeBlocks.hs  ParseTree.hs  Parser.hs  ParserWrapper.hs  PartialEval.hs  Typechecker.hs  X86.hs
lib/LVar/tests/: ex1.py  simple.py
lib/Regular/: DFA.hs  Expr.hs  Lexer.hs  NFA.hs
programs/: a01.aic  absolute.aic  fahrenheit.aic
tests/: .gitignore  aplusb.clike  aplusb.live  aplusb.lvar  aplusb.mon  aplusb.s  cond.clike  cond.live  cond.lvar  cond.mon  cond.s  ex1.clike  ex1.live  ex1.lvar  ex1.mon  ex1.s  ex2.clike  ex2.live  ex2.lvar  ex2.mon  ex2.s  ex3.clike  ex3.live  ex3.lvar  ex3.s  ex4.clike  ex4.live  ex4.mon  ex4.py  ex4.s  ex5.clike  ex5.live  ex5.lvar  ex5.mon  ex5.s  fib.clike  fib.lvar  fib.mon  fib.s  if_expr.clike  (+28 more)
