cabal-version:      2.4
name:               adventures-in-compilation
version:            0.1.0.0

author:             Andrew Shulaev
maintainer:         ash.drone@gmail.com

common shared-properties
    build-depends:    base ^>=4.18.0.0
        , text
        , containers
        , transformers
        , mtl
        , megaparsec
        , array
        , parser-combinators
        , filepath
        , process
    default-language: Haskell2010
    ghc-options:      -Wincomplete-patterns

common binary
    import: shared-properties
    build-depends: adventures-in-compilation
    extensions: OverloadedStrings

library
    import: shared-properties
    exposed-modules:  AST
        , Interp
        , Parser
        , Utils
        , CFG.Compiler
        , CFG.Instr
        , CFG.PhiPlacement
        , CFG.Printer
        , LVar.AST
        , LVar.ASTMon
        , LVar.Compiler
        , LVar.Liveness
        , LVar.MoveBiasing
        , LVar.PartialEval
        , LVar.Parser
        , LVar.Typechecker
        , LVar.X86
        , Grammar.Grammar
        , Grammar.Pregrammar
        , Graph.Defs
        , Graph.DominationFrontier
        , Graph.Dominator
        , Graph.DominatorTree
        , Graph.Parser
        , Graphviz
        , Regular.DFA
        , Regular.Expr
        , Regular.Lexer
        , Regular.NFA
        , SetMultimap
        , UndirectedGraph
    extensions:       OverloadedStrings
        , LambdaCase
        , MultiWayIf
    hs-source-dirs:   lib

executable interpreter
    import:           binary
    main-is:          app/Main.hs

executable dominator-graph
    import:           binary
    main-is:          app/DominationGraph.hs

executable compiler
    import:           binary
    main-is:          app/Compiler.hs

executable lvar
    import:           binary
    main-is:          app/LVar.hs

executable ll1
    import:           binary
    main-is:          app/LL1.hs

executable regular
    import:           binary
    main-is:          app/Regular.hs
