cabal-version:      2.4
name:               adventures-in-compilation
version:            0.1.0.0

author:             Andrew Shulaev
maintainer:         ash.drone@gmail.com

common shared-properties
    build-depends:    base ^>=4.18.0.0
        , text
        , containers
        , transformers
        , mtl
        , megaparsec
        , array
        , parser-combinators
        , filepath
        , process
        , aeson
        , directory
    default-language: Haskell2010
    ghc-options:      -Wincomplete-patterns

common binary
    import: shared-properties
    build-depends: adventures-in-compilation
    extensions: OverloadedStrings
        , TemplateHaskell

library
    import: shared-properties
    exposed-modules:  AST
        , Free
        , Interp
        , Parser
        , Utils
        , CFG.Compiler
        , CFG.Instr
        , CFG.PhiPlacement
        , CFG.Printer
        , DirectedGraph
        , LVar.AST
        , LVar.ASTC
        , LVar.ASTMon
        , LVar.ASTAlloc
        , LVar.Compiler
        , LVar.CompilerPipeline
        , LVar.ExplicateControl
        , LVar.Lexer
        , LVar.LexerDeps
        , LVar.Liveness
        , LVar.MoveBiasing
        , LVar.NewParser
        , LVar.NewParserDeps
        , LVar.PartialEval
        , LVar.ParserWrapper
        , LVar.ParseTree
        , LVar.Operators
        , LVar.OptimizeBlocks
        , LVar.Typechecker
        , LVar.X86
        , Grammar.Grammar
        , Grammar.Pregrammar
        , Graph.Defs
        , Graph.DominationFrontier
        , Graph.Dominator
        , Graph.DominatorTree
        , Graph.Parser
        , Graphviz
        , Pipeline
        , Regular.DFA
        , Regular.Expr
        , Regular.Lexer
        , Regular.NFA
        , SetMultimap
        , UndirectedGraph
    extensions:       OverloadedStrings
        , LambdaCase
        , MultiWayIf
        , DeriveFunctor
        , TemplateHaskell
        , FlexibleInstances
    hs-source-dirs:   lib
    build-tool-depends: alex:alex
        , happy:happy

executable dominator-graph
    import:           binary
    main-is:          app/DominationGraph.hs

executable lvar
    import:           binary
    main-is:          app/LVar.hs

executable ll1
    import:           binary
    main-is:          app/LL1.hs

executable regular
    import:           binary
    main-is:          app/Regular.hs

executable parser-test
    import:           binary
    main-is:          app/ParserTest.hs
    build-depends:    servant-server
        , wai
        , warp
    extensions:       DataKinds
        , TypeOperators
